--- a/src/main/webapp/css/week4.css
+++ b/src/main/webapp/css/week4.css
@@ -3,3 +3,15 @@
     width: 40px;
     height: 40px;
 }
+.leftside, .rightside
+{
+    width: 200px;
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.rowlink:hover
+{
+    background-color: grey;
+    color: white;
+}
