--- a/src/main/webapp/css/week4.css
+++ b/src/main/webapp/css/week4.css
@@ -15,3 +15,75 @@
     background-color: grey;
     color: white;
 }
+.grid-container
+{
+    display: grid;
+    grid-gap: 20px 50px;
+    grid-template-columns: 100%;
+}
+.a
+{
+    grid-area: 1 / 1 / 1/ 2;
+}
+.b
+{
+    grid-area: 2 / 1 / 2 / 2;
+}
+.c
+{
+    grid-area: 3 / 1 / 3 / 2;
+}
+.d
+{
+    grid-area: 4 / 1 / 4/ 2;
+}
+.large_heading
+{
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+@media(min-width:700px)
+{
+    .grid-container {
+        grid-template-columns: repeat(2,1fr);
+    }
+    .c
+    {
+        grid-area: 1 / 2 / 2 / 3;
+
+    }
+    .d
+    {
+        grid-area: 2 / 2 / 2 / 3;
+    }
+    .large_heading
+    {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+}
+.grid-container-five
+{
+    display: grid;
+    grid-gap: 20px 50px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-column: 1fr;
+}
+html
+{
+    background-color: lightgrey;
+}
+.heading
+{
+    background-color: grey;
+    color: white;
+}
+.heading h2
+{
+    text-align: center;
+}
+.dests
+{
+    grid-column-start: 1;
+    grid-column-end: 6;
+}
